# SCTransferToken

./: .gitignore  Cargo.toml  erdpy.json
mandos/: empty.scen.json
meta/: Cargo.toml
meta/src/: main.rs
output/: sc_utils.abi.json  sc_utils.imports.json  sc_utils.wasm  sc_utils.wat
src/: main.rs  storage.rs
src/utils/: send.rs
tests/: empty_mandos_rs_test.rs  empty_rust_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
