[package]
name = "sc_utils-wasm"
version = "0.0.1"
edition = "2018"
publish = false
authors = [ "Jason",]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.sc_utils]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.34.0"

[dependencies.elrond-wasm-output]
version = "0.34.0"
features = [ "wasm-output-mode",]
